# macos-system-prose

./: .gitignore  .markdownlint.json  .mypy.ini  AGENTS.md  ASYNC_MIGRATION_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  run.py
.github/workflows/: autofix.yml  ci.yml
data/: macos_versions.json  smbios_models.json
docs/: README.md  apple-oss-analysis.md  xnu-quick-reference.md
examples/: README.md  tui_demo.py
scripts/: scrape_macos_versions.py  scrape_smbios_models.py
src/prose/: __init__.py  constants.py  diff.py  engine.py  exceptions.py  html_report.py  iokit.py  macos_versions.py  main.py  parsers.py  schema.py  utils.py
src/prose/collectors/: __init__.py  advanced.py  developer.py  environment.py  ioregistry.py  network.py  packages.py  system.py
src/prose/datasets/: __init__.py  smbios.py
src/prose/tui/: __init__.py  app.py  app_enhanced.py
tests/: conftest.py  test_collection.py  test_collectors_mocked.py  test_diff.py  test_display.py  test_engine.py  test_exceptions.py  test_fixtures.py  test_html_report.py  test_ioregistry.py  test_smbios.py  test_utils.py
tests/fixtures/: README.md  imac19-1_bigsur_intel.json  macbookair6-2_monterey_oclp.json  macbookpro18-1_sequoia_m1pro.json  macbookpro18-1_ventura_m1.json  macmini8-1_sonoma_server.json
