[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macos-system-prose"
version = "1.0.0"
description = "A high-fidelity system introspection tool for macOS, designed for AI-based optimization."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "Tuan Duc Tran", email = "tuanductran.dev@gmail.com" }
]
keywords = [
    "macos",
    "system",
    "introspection",
    "diagnostics",
    "profiler",
    "ai",
    "llm",
    "devops",
    "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []  # No external dependencies - uses stdlib only

[project.urls]
Homepage = "https://github.com/tuanductran/macos-system-prose"
Repository = "https://github.com/tuanductran/macos-system-prose"
Issues = "https://github.com/tuanductran/macos-system-prose/issues"
Changelog = "https://github.com/tuanductran/macos-system-prose/blob/main/CHANGELOG.md"
Documentation = "https://github.com/tuanductran/macos-system-prose#readme"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
macos-prose = "prose.engine:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prose"]

[tool.hatch.build.targets.wheel.sources]
"src/prose" = "prose"

[tool.hatch.build.targets.wheel.force-include]
"src/prose/py.typed" = "prose/py.typed"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src/prose"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
